--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "axios": "^0.18.0"
+        "axios": "^0.18.0",
+        "moment": "^2.24.0",
+        "vuex": "^3.1.1"
     }
 }
